--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,10 @@
     "oclazyload": "^1.0.9",
     "angular-flot": "^0.0.16",
     "d3": "^3.5.16",
-    "ngstorage": "^0.3.10"
+    "ngstorage": "^0.3.10",
+    "angular-translate": "^2.11.0",
+    "angular-translate-loader-partial": "^2.11.0",
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
   },
   "resolutions": {
     "angular": "^1.5.4",
